#73 | 경각심 유발 페이지

--- a/ui/html/dashboard/main.html
+++ b/ui/html/dashboard/main.html
@@ -181,6 +181,14 @@
                                         <td class="font-weight-bold">123</td>
                                     </tr>
                                     <tr>
+                                        <td>메일 제목</td>
+                                        <td class="font-weight-bold">명절 보너스</td>
+                                    </tr>
+                                    <tr>
+                                        <td>메일 전송 계정</td>
+                                        <td class="font-weight-bold">sjabber@naver.com</td>
+                                    </tr>
+                                    <tr>
                                         <td>훈련 기간</td>
                                         <td class="font-weight-bold">2020.03.01 ~ 2021.12.11</td>
                                     </tr>
@@ -207,14 +215,7 @@
                                         <td class="font-weight-bold">2</td>
                                     </tr>
 
-                                    <tr>
-                                        <td>감염</td>
-                                        <td class="font-weight-bold">2</td>
-                                    </tr>
-                                    <tr>
-                                        <td>감염</td>
-                                        <td class="font-weight-bold">2</td>
-                                    </tr>
+
                                 </tbody>
 
                             </table>
