#71 프로젝트 관리 api-3

--- a/ui/html/project/project-making.html
+++ b/ui/html/project/project-making.html
@@ -75,10 +75,10 @@
         </div>
         <ul class="right">
             <li class="header-user dropdown ml-4 mr-3"><a class="user-photo trigger-dropdown"><img class="user-img"
-                                                                                                   src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/101e1fb9-0b2e-4f2d-acfb-a777dc48f629/d4sn4w7-2a5d1fdf-2af2-408a-9300-08f28cd12951.png"/></a>
+                                                                                                   src="/image/user.png"/></a>
                 <div class="dropdown-box with-header">
                     <div class="dropdown-header"><img class="user-img user-img--lg"
-                                                      src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/101e1fb9-0b2e-4f2d-acfb-a777dc48f629/d4sn4w7-2a5d1fdf-2af2-408a-9300-08f28cd12951.png"/>
+                                                      src="/image/user.png"/>
                         <div class="user-info">
                             <h3 id="dropdown_name">name</h3><span class="helper-text" id="dropdown_id">email</span>
                         </div>
@@ -290,10 +290,9 @@
         console.log(formData);
         r.send(JSON.stringify(formData));
     }
-
-    GetTmplProjectCreate()
-    GetTag()
-
+    GetDashBoard();
+    GetTag();
+    GetTmplProjectCreate();
 </script>
 
 </body>
