--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -77,10 +77,10 @@
       </div>
       <ul class="right">
         <li class="header-user dropdown ml-4 mr-3"><a class="user-photo trigger-dropdown"><img class="user-img"
-                                                                                               src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/101e1fb9-0b2e-4f2d-acfb-a777dc48f629/d4sn4w7-2a5d1fdf-2af2-408a-9300-08f28cd12951.png"/></a>
+                                                                                               src="/image/user.png"/></a>
           <div class="dropdown-box with-header">
             <div class="dropdown-header"><img class="user-img user-img--lg"
-                                              src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/101e1fb9-0b2e-4f2d-acfb-a777dc48f629/d4sn4w7-2a5d1fdf-2af2-408a-9300-08f28cd12951.png"/>
+                                              src="/image/user.png"/>
               <div class="user-info">
                 <h3 id="dropdown_name">name</h3><span class="helper-text" id="dropdown_id">email</span>
               </div>
@@ -105,10 +105,10 @@
               <h3>프로젝트 관리</h3>
             </div>
 
-<!--            템플릿 뷰어     -->
+<!--
             <div class="pgn-modal" id="my_modal">
               <div class="pgn-modal-wrapper ">
-                <!--   <div class="modal__header">
+                  <div class="modal__header">
                       <h5>템플릿 수정</h5>
                       <div class="toolbox">
                         <button class="btn-modal-close modal-dismiss" onclick="closeModal()"><i
@@ -166,7 +166,7 @@
                   <textarea name="content" id="content"></textarea>
                  <script>
                     CKEDITOR.replace('content');
-                  </script> -->
+                  </script>
                   <div class="form-group">
                     <div style="color: red;font-weight: bold; font-size: small">
                       {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : 악성메일 훈련 솔루션 IP, {{target_position}}
@@ -177,7 +177,7 @@
                     <label for="download_type">다운로드 방식</label><select id="download_type">
                     <option selected value="">첨부파일 없음</option>
                     <option value="1">링크 첨부</option>
-                  </select> -->
+                  </select>
                   </div>
 
                 </div>
@@ -188,7 +188,7 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="toolbox">
               <div class="box-body pt-0 px-0 responsive">
@@ -231,39 +231,39 @@
 <script src="/js/demo.js"></script>
 <script src="/js/script.js"></script>
 <script>
-  function getTag() {
-    console.log('getTagForTargetInfo')
-    const r = new XMLHttpRequest();
-    r.open('GET', 'http://localhost:5000/setting/getTag', true);
-    r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-    r.withCredentials = true;
-    r.onreadystatechange = function () {
-      //let rObj;
-      if (r.readyState === 4) {
-        if (r.status === 200) {
-          rObj = JSON.parse(r.responseText);
-          if (rObj.tags.length > 0) {
-            $('#tag_menage > tbody').empty();
-            for (let j = 0; j < rObj.tags.length; j++) {
-              $('#tag_menage >tbody:last').append("<tr id='tag_" + rObj.tags[j].tag_no + "'>" +
-                      "                        <td>" + rObj.tags[j].tag_name + "</td>\n" +
-                      "                        <td>" + rObj.tags[j].created_t + "</td>\n" +
-                      "                        </tr>");
-            }
-          }
-        } else if (r.status === 403) {
-          const tokenResult = Refresh()
-          if (tokenResult) {
-            getTag();
-            console.log("true")
-          }
-        } else {
-          document.location.href = '/';
-        }
-      }
-    };
-    r.send();
-  }
+  // function getTag() {
+  //   console.log('getTagForTargetInfo')
+  //   const r = new XMLHttpRequest();
+  //   r.open('GET', 'http://localhost:5000/setting/getTag', true);
+  //   r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+  //   r.withCredentials = true;
+  //   r.onreadystatechange = function () {
+  //     //let rObj;
+  //     if (r.readyState === 4) {
+  //       if (r.status === 200) {
+  //         rObj = JSON.parse(r.responseText);
+  //         if (rObj.tags.length > 0) {
+  //           $('#tag_menage > tbody').empty();
+  //           for (let j = 0; j < rObj.tags.length; j++) {
+  //             $('#tag_menage >tbody:last').append("<tr id='tag_" + rObj.tags[j].tag_no + "'>" +
+  //                     "                        <td>" + rObj.tags[j].tag_name + "</td>\n" +
+  //                     "                        <td>" + rObj.tags[j].created_t + "</td>\n" +
+  //                     "                        </tr>");
+  //           }
+  //         }
+  //       } else if (r.status === 403) {
+  //         const tokenResult = Refresh()
+  //         if (tokenResult) {
+  //           getTag();
+  //           console.log("true")
+  //         }
+  //       } else {
+  //         document.location.href = '/';
+  //       }
+  //     }
+  //   };
+  //   r.send();
+  // }
 
   function GetProject() {
     const r = new XMLHttpRequest();
@@ -435,9 +435,8 @@
     r.send(JSON.stringify({"p_no": p_no}));
   }
 
-
-
-  getTag();
+  // getTag();
+  GetDashBoard();
   GetProject();
   </script>
 </body>
