--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -110,6 +110,92 @@
               <button class="btn btn-primary active" id="del_project"><span>프로젝트 삭제</span></button>
             </div>
           </div>
+
+          <div class="pgn-modal" id="my_modal">
+            <div class="pgn-modal-wrapper ">
+              <div class="modal__header">
+                <h5>템플릿 수정</h5>
+                <div class="toolbox">
+                  <button class="btn-modal-close modal-dismiss" onclick="closeModal()"><i
+                          class="la la-times"></i></button>
+                </div>
+              </div>
+              <div class="modal__body">
+                <div class="form-group w-50">
+                  <label for="tmp_division">구분</label><select id="tmp_division">
+                  <option value="1" selected>기본</option>
+                  <option value="2">사용자</option>
+                </select>
+                </div>
+
+                <div class="form-group w-50">
+                  <label for="tmp_kind">훈련유형</label><select id="tmp_kind">
+                  <option value="1" selected>경고 안내</option>
+                  <option value="2">피싱 유도</option>
+                  <option value="3">실태 조사</option>
+                </select>
+                </div>
+
+                <div class="form-group w-50">
+                  <label for="file_info">첨부파일 정보</label><select id="file_info">
+                  <option selected value="">첨부파일 없음</option>
+                  <option value="1">EXE</option>
+                  <option value="2">HTML</option>
+                  <option value="3">Excel</option>
+                </select>
+                </div>
+
+                <div class="form-group">
+                  <label for="tmp_name">템플릿명</label>
+                  <input type="text"
+                         id="tmp_name"
+                         maxlength="30">
+                  <input type="hidden" id="tmp_no">
+                </div>
+
+                <div class="form-group">
+                  <label for="sender_name">발송자명</label>
+                  <input type="text"
+                         id="sender_name"
+                         maxlength="30">
+                </div>
+                <!-- <label>발송자</label> -->
+
+                <div class="form-group">
+                  <label for="title">메일 제목</label>
+                  <input type="text"
+                         id="title" maxlength="60"></div>
+                <!-- <label>메일 제목(최대 30자)</label> -->
+
+
+                <textarea name="content" id="content"></textarea>
+                <script>
+                  CKEDITOR.replace('content');
+                </script>
+                <div class="form-group">
+                  <div style="color: red;font-weight: bold; font-size: small">
+                    {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : 악성메일 훈련 솔루션 IP, {{target_position}}
+                    : 직급, {{target_orgarnize}} : 조직, {{target_phone}} : 훈련 대상자의 전화번호
+                  </div>
+                </div>
+                <div class="form-group w-50">
+                  <label for="download_type">다운로드 방식</label><select id="download_type">
+                  <option selected value="1">첨부파일 없음</option>
+                  <option value="2">링크 첨부</option>
+                  <option value="3">파일 첨부</option>
+                </select>
+                </div>
+
+              </div>
+              <div class="modal__footer">
+                <button class="btn btn-ghost modal-dismiss" onclick="closeModal()">취소</button>
+                <button class="btn btn-primary modal-dismiss" id="del" disabled="" onclick="delTml()">삭제</button>
+                <button class="btn btn-primary pull-right" id="tag_reg" onclick="editTml()"><span></span>
+                </button>
+              </div>
+            </div>
+          </div>
+
           <div class="toolbox">
             <div class="box-body pt-0 px-0 responsive">
               <table id="project_list">
@@ -440,6 +526,150 @@
     });
   });
 
+  function OpenModal(i) {
+    console.log(i + "번호")
+    if (i <= 3) {
+      del_button.disabled = true;
+      $('#del').removeClass('btn btn-primary modal-dismiss');
+      $('#del').addClass('btn btn-disabled');
+      $('#tag_reg span').text('추가하기');
+    } else {
+      $('#del').removeClass('btn btn-disabled');
+      $('#del').addClass('btn btn-primary modal-dismiss');
+      del_button.disabled = false;
+      $('#tag_reg span').text('수정하기');
+    }
+
+    GetTmlDetail(i); //todo 김태호 멘티 test 용 추가함.
+    $("#my_modal").show().center();
+  }
+
+  function closeModal() {
+    $('#my_modal').hide();
+  }
+
+  jQuery.fn.center = function () {
+    this.css("position", "absolute");
+    this.css("top", Math.max(0, (($(window).height() - $(this).outerHeight()) / 2) +
+            $(window).scrollTop()) + "px");
+    this.css("left", Math.max(0, (($(window).width() - $(this).outerWidth()) / 2) +
+            $(window).scrollLeft()) + "px");
+    this.css("width", "700px")
+    return this;
+  }
+
+  function GetTmlDetail(tml_no) {
+    const r = new XMLHttpRequest();
+    r.open('GET', 'http://localhost:5000/setting/TemplateDetail?template_no=' + tml_no, true);
+    r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+    r.withCredentials = true;
+    r.onreadystatechange = function () {
+      let rObj;
+      if (r.readyState === 4) {
+        if (r.status === 200) {
+          console.log(r.responseText);
+          rObj = JSON.parse(r.responseText);
+          // todo 파싱 해야함 .. 데이터 포멧 보고 하자.
+          // todo 김태호 멘티 자체적으로 포멧 추가..
+
+          $('#tmp_division').val(rObj.tmpls.tmp_division);
+          $('#tmp_kind').val(rObj.tmpls.tmp_kind);
+          $('#tmp_no').val(rObj.tmpls.tmp_no);
+          $('#tmp_name').val(rObj.tmpls.tmp_name);
+          $('#file_info').val(rObj.tmpls.file_info);
+          $('#sender_name').val(rObj.tmpls.sender_name);
+          $('#title').val(rObj.tmpls.title);
+          CKEDITOR.instances.content.setData(rObj.tmpls.content);
+          // $('#content').val(rObj.tmpls.content);
+          $('#download_type').val(rObj.tmpls.download_type);
+
+        } else if (r.status === 403) {
+          const tokenResult = Refresh();
+          if (tokenResult) {
+            GetTmlDetail(tml_no);
+          }
+        } else {
+          document.location.href = '/';
+        }
+      }
+    };
+    r.send();
+  }
+
+  function editTml() {
+    const tmp_division = $('#tmp_division').val();
+    const tmp_kind = $('#tmp_kind').val();
+    const tmp_name = $('#tmp_name').val();
+    const tmp_no = $('#tmp_no').val();
+    const file_info = $('#file_info').val();
+    const sender_name = $('#sender_name').val();
+    const title = $('#title').val();
+    const content = CKEDITOR.instances.content.getData();
+    const download_type = $('#download_type').val();
+
+    const formData = {
+      tmp_no: parseInt(tmp_no),
+      tmp_division: tmp_division,
+      tmp_kind: tmp_kind,
+      tmp_name: tmp_name,
+      file_info: file_info,
+      sender_name: sender_name,
+      title: title,
+      content: content,
+      download_type: download_type
+    };
+    console.log(JSON.stringify(formData));
+
+    const r = new XMLHttpRequest();
+    r.open('POST', 'http://localhost:5000/setting/EditTemplate', true);
+    r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+    r.withCredentials = true;
+    r.onreadystatechange = function () {
+      if (r.readyState === 4) {
+        if (r.status === 200) {
+          alert("템플릿 수정 완료했습니다.")
+          location.reload()
+        } else if (r.status === 403) {
+          const tokenResult = Refresh();
+          if (tokenResult) {
+            editTml();
+            console.log("true")
+          }
+        }
+      }
+    };
+    console.log(formData);
+    r.send(JSON.stringify(formData));
+
+  }
+
+  function delTml() {
+    const tmp_no = $('#tmp_no').val();
+
+    const formData = {
+      tmp_no: parseInt(tmp_no),
+    };
+
+    const r = new XMLHttpRequest();
+    r.open('POST', 'http://localhost:5000/setting/delTmp', true);
+    r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+    r.withCredentials = true;
+    r.onreadystatechange = function () {
+      if (r.readyState === 4) {
+        if (r.status === 200) {
+          alert("템플릿 삭제 완료했습니다.")
+          location.reload()
+        } else if (r.status === 403 || r.status === 500) {
+          const tokenResult = Refresh();
+          if (tokenResult) {
+            delTml();
+            console.log("true")
+          }
+        }
+      }
+    };
+    r.send(JSON.stringify(formData));
+  }
   // getTag();
   GetDashBoard();
   GetProject();
