--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -382,7 +382,7 @@
                         + '<td><div class="pgn-checkbox">'
                         + '<input type="checkbox" name=""><span></span></div></td><td>' + rObj.project_list[i].fake_no
                         + '</td><td>' + rObj.project_list[i].p_name + '</td><td>' + full_tag + '</td>'
-                        + '<td>' + status + '</td><td>' + rObj.project_list[i].tmp_no + '</td>'
+                        + '<td>' + status + '</td><td><button onclick="OpenModal('+rObj.project_list[i].tml_no+')" class="btn btn-primary">' + rObj.project_list[i].tmp_no + '</buttom></td>'
                         + '<td>' + rObj.project_list[i].targets + ' 명</td>' // 전체 대상자수
                         + '<td><progress class="valign-middle" value="' + rObj.project_list[i].infection + '" max="'
                         + rObj.project_list[i].targets + '"></progress>' + infection_percentage
@@ -527,6 +527,9 @@
       }
     });
   });
+
+  var del_button = document.getElementById('del');
+  var reg_button = document.getElementById('reg_tag');
 
   function OpenModal(i) {
     console.log(i + "번호")
